Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-07-18
----------
- Divorced the new CAVE_TDETECT flag from cave_info[][]; it is now in 
  cave_info2[][].  This is for efficiency.  The savefile code doesn't handle
  old dungeons; it now prompts for dungeon regeneration.  (takkaria)
- Added basic terrain flags; I still need to add some to lib/edit/terrain.txt.
  (takkaria)

2002-07-09
----------
- Fixed two bugs; enchant_spell() was called incorrectly from the Lua scripts,
  and the logic for bounds checking in cmd1.c was reversed. (takkaria)

2002-07-01
----------
- Renamed the disturb_panel option to disturb_detect. It disturbs the player
  when s/he is about to leave trap detected area. (pelpel)
- Added the trap detection status indicator. (pelpel)
- Slightly shortened the speed field and moved the depth field to fit the trap
  detection field in. All the available columns are used now. Please note that
  the last column on the last line cannot be used safely on character display
  terminals. (pelpel)

2002-06-30
----------
- Fixed a bug that allowed astral players to use word of recall to
  reach the surface. (parody)

2002-06-29
----------
- Fiddled around with the cygwin and "standard" makefiles - they are
  (should be) much smaller in file size. (takkaria)
- Fixed a compiler warning in util.c. (takkaria)
- Made cave_info a u16b array (from a byte array) for pelpel to do
  some UI stuff - also changed savefile code appropriately. (takkaria)
- Fix for the Half-Troll & Elf races; they were broken.  Many thanks
  to Mogami! (takkaria)
- Added astral mode.  This allows the player to start at the bottom
  of the dungeon and work upwards.  Try playing with evil mode on! ;)
  (takkaria)

2002-06-26
----------
- Added "evil mode" to Nangband - tread lightly! :) (takkaria)
- Fixed some index errors with the options tables. (takkaria)

2002-06-16
----------
- Fixed a compiler warning and added various files to ".cvsignore"s.