@@ -76,7 +76,7 @@ M:0:0:0:0
 E:75:33:1:1
 E:23:16:1:1
 E:37:4:1:1
-F:BRAVERY_30 | PSEUDO_ID_HEAVY | PSEUDO_ID_IMPROV
+F:BRAVERY_30
 T:Rookie
 T:Soldier
 T:Swordsman
@@ -186,7 +186,7 @@ M:91:2:1:350
 E:91:0:1:1
 E:21:5:1:1
 E:75:37:1:1
-F:BLESS_WEAPON | ZERO_FAIL | PSEUDO_ID_IMPROV
+F:BLESS_WEAPON | ZERO_FAIL
 T:Believer
 T:Acolyte
 T:Adept
@@ -273,7 +273,7 @@ M:90:1:5:350
 E:90:0:1:1
 E:23:8:1:1
 E:36:4:1:1
-F:CUMBER_GLOVE | CHOOSE_SPELLS | PSEUDO_ID_HEAVY | PSEUDO_ID_IMPROV
+F:CUMBER_GLOVE | CHOOSE_SPELLS
 T:Vagabond
 T:Cutpurse
 T:Footpad
@@ -361,7 +361,7 @@ E:90:0:1:1
 E:23:16:1:1
 E:19:13:1:1
 E:17:1:15:20
-F:CUMBER_GLOVE | EXTRA_SHOT | CHOOSE_SPELLS | PSEUDO_ID_IMPROV
+F:CUMBER_GLOVE | EXTRA_SHOT | CHOOSE_SPELLS
 T:Runner
 T:Strider
 T:Scout
@@ -448,7 +448,6 @@ M:91:2:1:400
 E:91:0:1:1
 E:23:16:1:1
 E:70:37:1:1
-F:PSEUDO_ID_HEAVY | PSEUDO_ID_IMPROV
 T:Gallant
 T:Keeper
 T:Protector
