@@ -2690,6 +2690,7 @@
 #define OPT_birth_evil_mode         (OPT_BIRTH+7)
 #define OPT_birth_no_stacking       (OPT_BIRTH+8)
 #define OPT_birth_astral			(OPT_BIRTH+9)
+#define OPT_birth_pseudo_light   (OPT_BIRTH+10)
 /* xxx xxx */
 #define OPT_cheat_peek				(OPT_CHEAT+0)
 #define OPT_cheat_hear				(OPT_CHEAT+1)
@@ -2708,6 +2709,7 @@
 #define OPT_adult_evil_mode			(OPT_ADULT+7)
 #define OPT_adult_no_stacking		(OPT_ADULT+8)
 #define OPT_adult_astral			(OPT_ADULT+9)
+#define OPT_adult_pseudo_light   (OPT_ADULT+10)
 /* xxx xxx */
 #define OPT_score_peek				(OPT_SCORE+0)
 #define OPT_score_hear				(OPT_SCORE+1)
@@ -2812,6 +2814,7 @@
 #define birth_evil_mode			op_ptr->opt[OPT_birth_evil_mode]
 #define birth_no_stacking		op_ptr->opt[OPT_birth_no_stacking]
 #define birth_astral			op_ptr->opt[OPT_birth_astral]
+#define birth_pseudo_light   op_ptr->opt[OPT_birth_pseudo_light]
 /* xxx xxx */
 #define cheat_peek				op_ptr->opt[OPT_cheat_peek]
 #define cheat_hear				op_ptr->opt[OPT_cheat_hear]
@@ -2830,6 +2833,7 @@
 #define adult_evil_mode			op_ptr->opt[OPT_adult_evil_mode]
 #define adult_no_stacking		op_ptr->opt[OPT_adult_no_stacking]
 #define adult_astral			op_ptr->opt[OPT_adult_astral]
+#define adult_pseudo_light   op_ptr->opt[OPT_adult_pseudo_light]
 /* xxx xxx */
 #define score_peek				op_ptr->opt[OPT_score_peek]
 #define score_hear				op_ptr->opt[OPT_score_hear]
